[gd_scene load_steps=17 format=2]

[ext_resource path="res://img/background.png" type="Texture" id=1]
[ext_resource path="res://img/inteli.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://img/column2.png" type="Texture" id=4]
[ext_resource path="res://img/column1.png" type="Texture" id=5]
[ext_resource path="res://img/dragon1.png" type="Texture" id=7]
[ext_resource path="res://img/dragon2.png" type="Texture" id=8]
[ext_resource path="res://img/dragon3.png" type="Texture" id=9]
[ext_resource path="res://img/gameover.png" type="Texture" id=11]
[ext_resource path="res://Futura Extra Bold.ttf" type="DynamicFontData" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.035, 31.6505 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 297.4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 292.2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23, 72.4787 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 12 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 600, 400 )
texture = ExtResource( 1 )

[node name="dragon" type="KinematicBody2D" parent="."]

[node name="dragonImages" type="AnimatedSprite" parent="dragon"]
position = Vector2( 81, 71 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="dragon"]
position = Vector2( 80.0988, 76.026 )
shape = SubResource( 2 )

[node name="columns" type="Area2D" parent="."]
position = Vector2( 100, -200 )

[node name="column1" type="Sprite" parent="columns"]
position = Vector2( 480, 698 )
texture = ExtResource( 5 )

[node name="column2" type="Sprite" parent="columns"]
position = Vector2( 480, -58 )
texture = ExtResource( 4 )

[node name="CollisionShape2D1" type="CollisionShape2D" parent="columns"]
position = Vector2( 480, 700 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="columns"]
position = Vector2( 480, -53 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="columns"]
position = Vector2( 480.95, 320.248 )
shape = SubResource( 5 )

[node name="gameover" type="Sprite" parent="."]
position = Vector2( 198.222, 300.034 )
scale = Vector2( 0.561039, 0.594979 )
texture = ExtResource( 11 )

[node name="score" type="Label" parent="."]
margin_left = 170.775
margin_top = 519.0
margin_right = 236.775
margin_bottom = 553.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inteli" type="Sprite" parent="."]
position = Vector2( 373.155, 25.3012 )
scale = Vector2( 0.182862, 0.149879 )
texture = ExtResource( 2 )

[connection signal="body_shape_entered" from="columns" to="." method="_on_columns_body_shape_entered"]
[connection signal="body_shape_exited" from="columns" to="." method="_on_columns_body_shape_exited"]
